--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7ecb1932-a586-49bc-8b61-c3a1e0b84438",
    "metadata": {},
    "outputs": [],
@@ -16,71 +16,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "e6d71c22-18d7-4cba-92d2-2b2714232aef",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.1.95.jpg \n",
-      " [[-1.45909059e-10 -1.45909059e-10 -1.45909059e-10 ... -1.45909059e-10\n",
-      "  -1.45909059e-10 -1.45909059e-10]\n",
-      " [-1.72375882e-10 -1.74125882e-10 -1.75875882e-10 ... -1.22136941e-10\n",
-      "  -1.74175882e-10 -1.72375882e-10]\n",
-      " [-1.87682706e-10 -1.90012706e-10 -1.92332706e-10 ... -1.92322706e-10\n",
-      "  -1.90002706e-10 -1.87682706e-10]\n",
-      " ...\n",
-      " [-1.44331765e-11 -1.55121765e-11 -1.86751765e-11 ... -1.86871765e-11\n",
-      "  -1.55161765e-11 -1.44331765e-11]\n",
-      " [-2.37129353e-11 -2.43398353e-11 -2.61215353e-11 ... -2.60925353e-11\n",
-      "  -2.43157353e-11 -2.37129353e-11]\n",
-      " [-3.88072943e-11 -3.88097767e-11 -3.88119075e-11 ... -3.88026684e-11\n",
-      "  -3.88048081e-11 -3.88072943e-11]]\n",
-      "2.1.75.jpg \n",
-      " [[-1.45909059e-10 -1.45909059e-10 -1.45909059e-10 ... -1.45909059e-10\n",
-      "  -1.45909059e-10 -1.45909059e-10]\n",
-      " [-1.72375882e-10 -1.74125882e-10 -1.75875882e-10 ... -1.22136941e-10\n",
-      "  -1.74175882e-10 -1.72375882e-10]\n",
-      " [-1.87682706e-10 -1.90012706e-10 -1.92332706e-10 ... -1.92322706e-10\n",
-      "  -1.90002706e-10 -1.87682706e-10]\n",
-      " ...\n",
-      " [-1.44331765e-11 -1.55121765e-11 -1.86751765e-11 ... -1.86871765e-11\n",
-      "  -1.55161765e-11 -1.44331765e-11]\n",
-      " [-2.37129353e-11 -2.43398353e-11 -2.61215353e-11 ... -2.60925353e-11\n",
-      "  -2.43157353e-11 -2.37129353e-11]\n",
-      " [-3.88072943e-11 -3.88097767e-11 -3.88119075e-11 ... -3.88026684e-11\n",
-      "  -3.88048081e-11 -3.88072943e-11]]\n",
-      "2.1.50.jpg \n",
-      " [[-1.45909059e-10 -1.45909059e-10 -1.45909059e-10 ... -1.45909059e-10\n",
-      "  -1.45909059e-10 -1.45909059e-10]\n",
-      " [-1.72375882e-10 -1.74125882e-10 -1.75875882e-10 ... -1.22136941e-10\n",
-      "  -1.74175882e-10 -1.72375882e-10]\n",
-      " [-1.87682706e-10 -1.90012706e-10 -1.92332706e-10 ... -1.92322706e-10\n",
-      "  -1.90002706e-10 -1.87682706e-10]\n",
-      " ...\n",
-      " [-1.44331765e-11 -1.55121765e-11 -1.86751765e-11 ... -1.86871765e-11\n",
-      "  -1.55161765e-11 -1.44331765e-11]\n",
-      " [-2.37129353e-11 -2.43398353e-11 -2.61215353e-11 ... -2.60925353e-11\n",
-      "  -2.43157353e-11 -2.37129353e-11]\n",
-      " [-3.88072943e-11 -3.88097767e-11 -3.88119075e-11 ... -3.88026684e-11\n",
-      "  -3.88048081e-11 -3.88072943e-11]]\n",
-      "2.1.25.jpg \n",
-      " [[-1.45909059e-10 -1.45909059e-10 -1.45909059e-10 ... -1.45909059e-10\n",
-      "  -1.45909059e-10 -1.45909059e-10]\n",
-      " [-1.72375882e-10 -1.74125882e-10 -1.75875882e-10 ... -1.22136941e-10\n",
-      "  -1.74175882e-10 -1.72375882e-10]\n",
-      " [-1.87682706e-10 -1.90012706e-10 -1.92332706e-10 ... -1.92322706e-10\n",
-      "  -1.90002706e-10 -1.87682706e-10]\n",
-      " ...\n",
-      " [-1.44331765e-11 -1.55121765e-11 -1.86751765e-11 ... -1.86871765e-11\n",
-      "  -1.55161765e-11 -1.44331765e-11]\n",
-      " [-2.37129353e-11 -2.43398353e-11 -2.61215353e-11 ... -2.60925353e-11\n",
-      "  -2.43157353e-11 -2.37129353e-11]\n",
-      " [-3.88072943e-11 -3.88097767e-11 -3.88119075e-11 ... -3.88026684e-11\n",
-      "  -3.88048081e-11 -3.88072943e-11]]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CR2.1.95</th>\n",
+       "      <th>RMSE2.1.95</th>\n",
+       "      <th>CR2.1.75</th>\n",
+       "      <th>RMSE2.1.75</th>\n",
+       "      <th>CR2.1.50</th>\n",
+       "      <th>RMSE2.1.50</th>\n",
+       "      <th>CR2.1.25</th>\n",
+       "      <th>RMSE2.1.25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.225199</td>\n",
+       "      <td>8.373892e-11</td>\n",
+       "      <td>4.148863</td>\n",
+       "      <td>8.895564e-11</td>\n",
+       "      <td>5.226791</td>\n",
+       "      <td>1.028789e-10</td>\n",
+       "      <td>5.761676</td>\n",
+       "      <td>1.284781e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.238544</td>\n",
+       "      <td>5.115598e-11</td>\n",
+       "      <td>4.128169</td>\n",
+       "      <td>5.342171e-11</td>\n",
+       "      <td>5.130105</td>\n",
+       "      <td>6.188467e-11</td>\n",
+       "      <td>6.043299</td>\n",
+       "      <td>7.578772e-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.120685</td>\n",
+       "      <td>3.433669e-11</td>\n",
+       "      <td>3.985854</td>\n",
+       "      <td>3.721427e-11</td>\n",
+       "      <td>4.829196</td>\n",
+       "      <td>4.312023e-11</td>\n",
+       "      <td>5.577474</td>\n",
+       "      <td>5.715082e-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2.046308</td>\n",
+       "      <td>3.145086e-11</td>\n",
+       "      <td>3.891004</td>\n",
+       "      <td>3.419594e-11</td>\n",
+       "      <td>4.719977</td>\n",
+       "      <td>3.806139e-11</td>\n",
+       "      <td>5.527383</td>\n",
+       "      <td>4.962122e-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.123727</td>\n",
+       "      <td>4.129872e-11</td>\n",
+       "      <td>3.999041</td>\n",
+       "      <td>4.510328e-11</td>\n",
+       "      <td>4.878363</td>\n",
+       "      <td>4.993383e-11</td>\n",
+       "      <td>5.725463</td>\n",
+       "      <td>6.466399e-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>1.858981</td>\n",
+       "      <td>9.084699e-03</td>\n",
+       "      <td>3.425889</td>\n",
+       "      <td>9.344500e-03</td>\n",
+       "      <td>4.147129</td>\n",
+       "      <td>9.825954e-03</td>\n",
+       "      <td>4.917730</td>\n",
+       "      <td>1.105730e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>1.834242</td>\n",
+       "      <td>9.943461e-03</td>\n",
+       "      <td>3.333994</td>\n",
+       "      <td>1.028376e-02</td>\n",
+       "      <td>4.082524</td>\n",
+       "      <td>1.073754e-02</td>\n",
+       "      <td>4.792023</td>\n",
+       "      <td>1.185783e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>1.823351</td>\n",
+       "      <td>1.098971e-02</td>\n",
+       "      <td>3.298053</td>\n",
+       "      <td>1.137544e-02</td>\n",
+       "      <td>4.052761</td>\n",
+       "      <td>1.189028e-02</td>\n",
+       "      <td>4.685106</td>\n",
+       "      <td>1.353249e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>1.836679</td>\n",
+       "      <td>1.239460e-02</td>\n",
+       "      <td>3.361852</td>\n",
+       "      <td>1.263808e-02</td>\n",
+       "      <td>4.126004</td>\n",
+       "      <td>1.333398e-02</td>\n",
+       "      <td>4.781675</td>\n",
+       "      <td>1.488403e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>1.865630</td>\n",
+       "      <td>1.392819e-02</td>\n",
+       "      <td>3.387097</td>\n",
+       "      <td>1.424251e-02</td>\n",
+       "      <td>4.080146</td>\n",
+       "      <td>1.511365e-02</td>\n",
+       "      <td>4.772727</td>\n",
+       "      <td>1.668053e-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     CR2.1.95    RMSE2.1.95  CR2.1.75    RMSE2.1.75  CR2.1.50    RMSE2.1.50  \\\n",
+       "0    2.225199  8.373892e-11  4.148863  8.895564e-11  5.226791  1.028789e-10   \n",
+       "1    2.238544  5.115598e-11  4.128169  5.342171e-11  5.130105  6.188467e-11   \n",
+       "2    2.120685  3.433669e-11  3.985854  3.721427e-11  4.829196  4.312023e-11   \n",
+       "3    2.046308  3.145086e-11  3.891004  3.419594e-11  4.719977  3.806139e-11   \n",
+       "4    2.123727  4.129872e-11  3.999041  4.510328e-11  4.878363  4.993383e-11   \n",
+       "..        ...           ...       ...           ...       ...           ...   \n",
+       "196  1.858981  9.084699e-03  3.425889  9.344500e-03  4.147129  9.825954e-03   \n",
+       "197  1.834242  9.943461e-03  3.333994  1.028376e-02  4.082524  1.073754e-02   \n",
+       "198  1.823351  1.098971e-02  3.298053  1.137544e-02  4.052761  1.189028e-02   \n",
+       "199  1.836679  1.239460e-02  3.361852  1.263808e-02  4.126004  1.333398e-02   \n",
+       "200  1.865630  1.392819e-02  3.387097  1.424251e-02  4.080146  1.511365e-02   \n",
+       "\n",
+       "     CR2.1.25    RMSE2.1.25  \n",
+       "0    5.761676  1.284781e-10  \n",
+       "1    6.043299  7.578772e-11  \n",
+       "2    5.577474  5.715082e-11  \n",
+       "3    5.527383  4.962122e-11  \n",
+       "4    5.725463  6.466399e-11  \n",
+       "..        ...           ...  \n",
+       "196  4.917730  1.105730e-02  \n",
+       "197  4.792023  1.185783e-02  \n",
+       "198  4.685106  1.353249e-02  \n",
+       "199  4.781675  1.488403e-02  \n",
+       "200  4.772727  1.668053e-02  \n",
+       "\n",
+       "[201 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -112,13 +242,13 @@
     "    for q in [95, 75, 50, 25]:\n",
     "        title = '2.1.' + str(q) + '.jpg'\n",
     "        im.save(title, quality=q)\n",
-    "        # plt.savefig(title, bbox_inches='tight', pad_inches=0, dpi=(q*my_dpi/100))\n",
-    "        # im = Image.open(title)\n",
-    "        # im = im.resize((227, 101), Image.LANCZOS)\n",
-    "        output_array = np.asarray(im)\n",
+    "        im_jpg = Image.open(title)\n",
+    "        output_array = np.asarray(im_jpg)\n",
+    "\n",
+    "        assert output_array.shape[0] == arr.shape[0] and output_array.shape[1] == arr.shape[1], \"Dimension mismatch!\"\n",
     "    \n",
     "        # Loop through output_array and replace RGB by raw in copy\n",
-    "        copy = arr.copy()\n",
+    "        copy = np.zeros_like(arr)\n",
     "        for row_index, row in enumerate(output_array):\n",
     "            for col_index, col in enumerate(row):\n",
     "                copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
@@ -133,37 +263,30 @@
     "        rmse = np.sqrt(np.mean(diff**2))\n",
     "        rmsecol = 'RMSE2.1.' + str(q)\n",
     "        df.at[i, rmsecol] = rmse\n",
-    "        print(title, \"\\n\", diff)\n",
-    "    break\n",
-    "# df.to_pickle(\"analysis2.1.pkl\")\n",
-    "# df\n",
-    "\n",
-    "# Potential problem: in the resizing line, this resizes the image after it's already saved, so out_imsize is still associated with the \n",
-    "# smaller image (when we want it to be the same size image but with less quality) \n",
-    "\n",
-    "# So I think we should go back to working with im.save from the first analysis.ipynb? But need to make sure the computation doesn't take \n",
-    "# too long."
+    "        \n",
+    "df.to_pickle(\"analysis2.1.pkl\")\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "id": "881cea60-1c07-45a0-8c80-7fa8cea98988",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "(True, True, True)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isnull().sum().sum()"
+    "df[\"RMSE2.1.95\"].equals(df[\"RMSE2.1.25\"]), df[\"RMSE2.1.95\"].equals(df[\"RMSE2.1.50\"]), df[\"RMSE2.1.95\"].equals(df[\"RMSE2.1.75\"])"
    ]
   },
   {
