Complete new implementation for analysis2.2

--- a/analysis2.1.ipynb
+++ b/analysis2.1.ipynb
@@ -233,19 +233,17 @@
     "    plt.imshow(arr, cmap='gray')\n",
     "    plt.axis(\"off\")\n",
     "\n",
-    "    # Save as PNG then reopen. Then save as JPG's of varying quality. Convert back to np array.\n",
+    "    # Save as PNG then reopen. Then save as JPG's of varying quality (for loop). Convert back to np array.\n",
     "    plt.savefig('2.1.png', bbox_inches='tight', pad_inches=0)\n",
     "    plt.close()\n",
     "    im = Image.open('2.1.png')\n",
-    "    im = im.convert('RGB') # need to convert, otherwise saving as JPG doesn't work\n",
+    "    im = im.convert('RGB') # need to convert from RGBA to RGB, otherwise saving as JPG doesn't work\n",
     "\n",
     "    for q in [95, 75, 50, 25]:\n",
     "        title = '2.1.' + str(q) + '.jpg'\n",
     "        im.save(title, quality=q)\n",
     "        im_jpg = Image.open(title)\n",
     "        output_array = np.asarray(im_jpg)\n",
-    "\n",
-    "        assert output_array.shape[0] == arr.shape[0] and output_array.shape[1] == arr.shape[1], \"Dimension mismatch!\"\n",
     "    \n",
     "        # Loop through output_array and replace RGB by raw in copy\n",
     "        copy = np.zeros_like(arr)\n",
