--- a/analysis2.2.ipynb
+++ b/analysis2.2.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "cb160bd1-3f11-4e00-b96d-912708061b0d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Image'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01minterpolate\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m griddata\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mImage\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Image'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd\n",
@@ -29,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "9b31bfd3-7a9d-4db3-881d-ea35e8e6ab74",
    "metadata": {},
    "outputs": [
@@ -54,8 +42,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>CR2.2.100</th>\n",
-       "      <th>RMSE2.2.100</th>\n",
+       "      <th>CR2.2.95</th>\n",
+       "      <th>RMSE2.2.95</th>\n",
        "      <th>CR2.2.75</th>\n",
        "      <th>RMSE2.2.75</th>\n",
        "      <th>CR2.2.50</th>\n",
@@ -67,58 +55,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>2.731508</td>\n",
+       "      <td>7.585385e-11</td>\n",
        "      <td>5.593847</td>\n",
        "      <td>8.196205e-11</td>\n",
-       "      <td>7.568493</td>\n",
-       "      <td>9.770478e-11</td>\n",
-       "      <td>10.601476</td>\n",
-       "      <td>1.328808e-10</td>\n",
-       "      <td>15.837927</td>\n",
-       "      <td>2.463017e-10</td>\n",
+       "      <td>7.014160</td>\n",
+       "      <td>9.203225e-11</td>\n",
+       "      <td>7.897196</td>\n",
+       "      <td>1.158381e-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2.894597</td>\n",
+       "      <td>6.348276e-11</td>\n",
        "      <td>5.970850</td>\n",
        "      <td>6.527043e-11</td>\n",
-       "      <td>8.283064</td>\n",
-       "      <td>7.553653e-11</td>\n",
-       "      <td>11.844218</td>\n",
-       "      <td>1.066376e-10</td>\n",
-       "      <td>17.766327</td>\n",
-       "      <td>2.059812e-10</td>\n",
+       "      <td>7.550304</td>\n",
+       "      <td>7.011253e-11</td>\n",
+       "      <td>9.082420</td>\n",
+       "      <td>8.047773e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2.682558</td>\n",
+       "      <td>4.413099e-11</td>\n",
        "      <td>5.481357</td>\n",
        "      <td>4.644386e-11</td>\n",
-       "      <td>7.444343</td>\n",
-       "      <td>5.622364e-11</td>\n",
-       "      <td>10.630619</td>\n",
-       "      <td>7.753508e-11</td>\n",
-       "      <td>16.516194</td>\n",
-       "      <td>1.480423e-10</td>\n",
+       "      <td>6.973504</td>\n",
+       "      <td>5.150911e-11</td>\n",
+       "      <td>8.468085</td>\n",
+       "      <td>6.141829e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2.804874</td>\n",
+       "      <td>4.497024e-11</td>\n",
        "      <td>5.962810</td>\n",
        "      <td>4.618577e-11</td>\n",
-       "      <td>8.127816</td>\n",
-       "      <td>5.425235e-11</td>\n",
-       "      <td>11.666045</td>\n",
-       "      <td>7.548834e-11</td>\n",
-       "      <td>18.194956</td>\n",
-       "      <td>1.412555e-10</td>\n",
+       "      <td>7.452920</td>\n",
+       "      <td>4.917307e-11</td>\n",
+       "      <td>9.146270</td>\n",
+       "      <td>5.908598e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>2.809298</td>\n",
+       "      <td>4.671715e-11</td>\n",
        "      <td>5.937298</td>\n",
        "      <td>4.901204e-11</td>\n",
-       "      <td>8.146341</td>\n",
-       "      <td>5.898633e-11</td>\n",
-       "      <td>11.708094</td>\n",
-       "      <td>8.079382e-11</td>\n",
-       "      <td>18.116371</td>\n",
-       "      <td>1.499082e-10</td>\n",
+       "      <td>7.513292</td>\n",
+       "      <td>5.454943e-11</td>\n",
+       "      <td>9.217260</td>\n",
+       "      <td>6.716423e-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -133,58 +121,58 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>196</th>\n",
+       "      <td>2.911860</td>\n",
+       "      <td>1.010413e-02</td>\n",
        "      <td>5.910355</td>\n",
        "      <td>1.034624e-02</td>\n",
-       "      <td>7.921284</td>\n",
-       "      <td>1.216158e-02</td>\n",
-       "      <td>11.132460</td>\n",
-       "      <td>1.660012e-02</td>\n",
-       "      <td>16.644178</td>\n",
-       "      <td>2.938850e-02</td>\n",
+       "      <td>7.215094</td>\n",
+       "      <td>1.088751e-02</td>\n",
+       "      <td>8.588433</td>\n",
+       "      <td>1.229336e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
+       "      <td>2.918494</td>\n",
+       "      <td>1.104861e-02</td>\n",
        "      <td>5.838121</td>\n",
        "      <td>1.133318e-02</td>\n",
-       "      <td>7.853264</td>\n",
-       "      <td>1.338165e-02</td>\n",
-       "      <td>10.985391</td>\n",
-       "      <td>1.805124e-02</td>\n",
-       "      <td>16.472070</td>\n",
-       "      <td>3.216867e-02</td>\n",
+       "      <td>7.178520</td>\n",
+       "      <td>1.191273e-02</td>\n",
+       "      <td>8.496610</td>\n",
+       "      <td>1.381746e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>198</th>\n",
+       "      <td>2.824143</td>\n",
+       "      <td>1.225585e-02</td>\n",
        "      <td>5.736336</td>\n",
        "      <td>1.258253e-02</td>\n",
-       "      <td>7.721762</td>\n",
-       "      <td>1.476869e-02</td>\n",
-       "      <td>10.830669</td>\n",
-       "      <td>1.995737e-02</td>\n",
-       "      <td>16.198913</td>\n",
-       "      <td>3.546910e-02</td>\n",
+       "      <td>7.013176</td>\n",
+       "      <td>1.325182e-02</td>\n",
+       "      <td>8.396056</td>\n",
+       "      <td>1.499607e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>199</th>\n",
+       "      <td>2.814121</td>\n",
+       "      <td>1.367826e-02</td>\n",
        "      <td>5.766874</td>\n",
        "      <td>1.402025e-02</td>\n",
-       "      <td>7.715101</td>\n",
-       "      <td>1.649258e-02</td>\n",
-       "      <td>10.907557</td>\n",
-       "      <td>2.241504e-02</td>\n",
-       "      <td>16.301535</td>\n",
-       "      <td>3.997027e-02</td>\n",
+       "      <td>7.076154</td>\n",
+       "      <td>1.475587e-02</td>\n",
+       "      <td>8.418460</td>\n",
+       "      <td>1.659224e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>200</th>\n",
+       "      <td>2.864135</td>\n",
+       "      <td>1.542675e-02</td>\n",
        "      <td>5.743463</td>\n",
        "      <td>1.575256e-02</td>\n",
-       "      <td>7.764857</td>\n",
-       "      <td>1.865043e-02</td>\n",
-       "      <td>10.935786</td>\n",
-       "      <td>2.515999e-02</td>\n",
-       "      <td>16.350593</td>\n",
-       "      <td>4.450844e-02</td>\n",
+       "      <td>6.994462</td>\n",
+       "      <td>1.662453e-02</td>\n",
+       "      <td>8.420556</td>\n",
+       "      <td>1.910551e-02</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -192,36 +180,36 @@
        "</div>"
       ],
       "text/plain": [
-       "     CR2.2.100   RMSE2.2.100  CR2.2.75    RMSE2.2.75   CR2.2.50    RMSE2.2.50  \\\n",
-       "0     5.593847  8.196205e-11  7.568493  9.770478e-11  10.601476  1.328808e-10   \n",
-       "1     5.970850  6.527043e-11  8.283064  7.553653e-11  11.844218  1.066376e-10   \n",
-       "2     5.481357  4.644386e-11  7.444343  5.622364e-11  10.630619  7.753508e-11   \n",
-       "3     5.962810  4.618577e-11  8.127816  5.425235e-11  11.666045  7.548834e-11   \n",
-       "4     5.937298  4.901204e-11  8.146341  5.898633e-11  11.708094  8.079382e-11   \n",
-       "..         ...           ...       ...           ...        ...           ...   \n",
-       "196   5.910355  1.034624e-02  7.921284  1.216158e-02  11.132460  1.660012e-02   \n",
-       "197   5.838121  1.133318e-02  7.853264  1.338165e-02  10.985391  1.805124e-02   \n",
-       "198   5.736336  1.258253e-02  7.721762  1.476869e-02  10.830669  1.995737e-02   \n",
-       "199   5.766874  1.402025e-02  7.715101  1.649258e-02  10.907557  2.241504e-02   \n",
-       "200   5.743463  1.575256e-02  7.764857  1.865043e-02  10.935786  2.515999e-02   \n",
+       "     CR2.2.95    RMSE2.2.95  CR2.2.75    RMSE2.2.75  CR2.2.50    RMSE2.2.50  \\\n",
+       "0    2.731508  7.585385e-11  5.593847  8.196205e-11  7.014160  9.203225e-11   \n",
+       "1    2.894597  6.348276e-11  5.970850  6.527043e-11  7.550304  7.011253e-11   \n",
+       "2    2.682558  4.413099e-11  5.481357  4.644386e-11  6.973504  5.150911e-11   \n",
+       "3    2.804874  4.497024e-11  5.962810  4.618577e-11  7.452920  4.917307e-11   \n",
+       "4    2.809298  4.671715e-11  5.937298  4.901204e-11  7.513292  5.454943e-11   \n",
+       "..        ...           ...       ...           ...       ...           ...   \n",
+       "196  2.911860  1.010413e-02  5.910355  1.034624e-02  7.215094  1.088751e-02   \n",
+       "197  2.918494  1.104861e-02  5.838121  1.133318e-02  7.178520  1.191273e-02   \n",
+       "198  2.824143  1.225585e-02  5.736336  1.258253e-02  7.013176  1.325182e-02   \n",
+       "199  2.814121  1.367826e-02  5.766874  1.402025e-02  7.076154  1.475587e-02   \n",
+       "200  2.864135  1.542675e-02  5.743463  1.575256e-02  6.994462  1.662453e-02   \n",
        "\n",
-       "      CR2.2.25    RMSE2.2.25  \n",
-       "0    15.837927  2.463017e-10  \n",
-       "1    17.766327  2.059812e-10  \n",
-       "2    16.516194  1.480423e-10  \n",
-       "3    18.194956  1.412555e-10  \n",
-       "4    18.116371  1.499082e-10  \n",
-       "..         ...           ...  \n",
-       "196  16.644178  2.938850e-02  \n",
-       "197  16.472070  3.216867e-02  \n",
-       "198  16.198913  3.546910e-02  \n",
-       "199  16.301535  3.997027e-02  \n",
-       "200  16.350593  4.450844e-02  \n",
+       "     CR2.2.25    RMSE2.2.25  \n",
+       "0    7.897196  1.158381e-10  \n",
+       "1    9.082420  8.047773e-11  \n",
+       "2    8.468085  6.141829e-11  \n",
+       "3    9.146270  5.908598e-11  \n",
+       "4    9.217260  6.716423e-11  \n",
+       "..        ...           ...  \n",
+       "196  8.588433  1.229336e-02  \n",
+       "197  8.496610  1.381746e-02  \n",
+       "198  8.396056  1.499607e-02  \n",
+       "199  8.418460  1.659224e-02  \n",
+       "200  8.420556  1.910551e-02  \n",
        "\n",
        "[201 rows x 8 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,22 +246,26 @@
     "    ratio = (phimax-phimin)/255\n",
     "    def convertRGBToRaw(x):\n",
     "        return ratio*x + phimin\n",
-    "    \n",
-    "    # Plot and save image as PNG and JPG, reopen JPG as np array\n",
+    "\n",
+    "    # Plot image (raw automatically converted to grayscale), save as PNG\n",
     "    plt.figure(figsize=(264/my_dpi, 264/my_dpi), dpi=my_dpi)\n",
     "    plt.imshow(grid_z, extent=(-101, 101, -101, 101), cmap='gray')\n",
     "    plt.axis(\"off\")\n",
+    "\n",
+    "    # Save as PNG then reopen. Then save as JPG's of varying quality (for loop). Convert back to np array.\n",
     "    plt.savefig('2.2.png', bbox_inches='tight', pad_inches=0)\n",
+    "    plt.close()\n",
+    "    im = Image.open('2.2.png')\n",
+    "    im = im.convert('RGB') # need to convert from RGBA to RGB, otherwise saving as JPG doesn't work\n",
     "    \n",
-    "    for q in [100, 75, 50, 25]:\n",
+    "    for q in [95, 75, 50, 25]:\n",
     "        title = '2.2.' + str(q) + '.jpg'\n",
-    "        plt.savefig(title, bbox_inches='tight', pad_inches=0, dpi=(q*my_dpi/100))\n",
-    "        im = Image.open(title)\n",
-    "        im = im.resize((203, 203), Image.LANCZOS)\n",
-    "        im_array = np.asarray(im)\n",
-    "    \n",
+    "        im.save(title, quality=q)\n",
+    "        im_jpg = Image.open(title)\n",
+    "        im_array = np.asarray(im_jpg)\n",
+    "\n",
     "        # Loop through im_array and replace RGB by raw in copy (203x203)\n",
-    "        copy = grid_z.copy()\n",
+    "        copy = np.zeros_like(grid_z)\n",
     "        for row_index, row in enumerate(im_array):\n",
     "            for col_index, col in enumerate(row):\n",
     "                copy[row_index][col_index] = convertRGBToRaw(col[0])\n",
@@ -302,12 +294,11 @@
     "        out_imsize = os.stat(title).st_size\n",
     "        crcol = 'CR2.2.' + str(q)\n",
     "        df.at[i, crcol] = in_imsize/out_imsize\n",
-    "        \n",
-    "        diff_array = output_array - arr\n",
-    "        rmse = np.sqrt(np.mean(diff_array**2))\n",
+    "\n",
+    "        diff = output_array - arr\n",
+    "        rmse = np.sqrt(np.mean(diff**2))\n",
     "        rmsecol = 'RMSE2.2.' + str(q)\n",
     "        df.at[i, rmsecol] = rmse\n",
-    "    plt.close()\n",
     "    \n",
     "df.to_pickle(\"analysis2.2.pkl\")\n",
     "df"
