Make more progress on finalizing analysis2.4

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9b491d61-c4b6-4039-88b8-eb13c342b923",
    "metadata": {},
    "outputs": [],
@@ -13,34 +13,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 3.91023390e-07+6.04875823e-24j  1.57227917e-24+1.52935106e-24j\n",
-      "  -1.27319624e-23-5.50783007e-24j ...  5.25761070e-24-2.95078461e-24j\n",
-      "  -3.06128317e-24-1.03930925e-23j  1.19056930e-24-3.63573986e-24j]\n",
-      " [ 3.90888410e-07+9.25408310e-24j -1.40701465e-08-6.53256666e-11j\n",
-      "   3.83333984e-11-6.21138175e-12j ...  2.98187544e-11-8.25875488e-13j\n",
-      "   3.83333984e-11+6.21138175e-12j -1.40701465e-08+6.53256666e-11j]\n",
-      " [ 3.90742210e-07+6.87593884e-24j -3.11518599e-08-4.13931993e-10j\n",
-      "   1.84543651e-10+7.34573089e-12j ...  9.34452639e-11+6.58336666e-12j\n",
-      "   1.84543651e-10-7.34573089e-12j -3.11518599e-08+4.13931993e-10j]\n",
-      " ...\n",
-      " [ 3.71843410e-08+2.84343336e-25j -2.19739759e-08-3.65957494e-10j\n",
-      "  -4.51768037e-10-1.96464162e-12j ... -4.47220052e-09+1.81958787e-10j\n",
-      "  -4.51768037e-10+1.96464162e-12j -2.19739759e-08+3.65957494e-10j]\n",
-      " [ 1.94760661e-08+5.16987883e-26j -1.13756708e-08-1.93317886e-10j\n",
-      "  -1.32404679e-10+3.09568000e-12j ... -2.36781898e-09+9.65372727e-11j\n",
-      "  -1.32404679e-10-3.09568000e-12j -1.13756708e-08+1.93317886e-10j]\n",
-      " [ 9.88760964e-16+2.56379794e-29j -1.12990894e-14+9.04848331e-13j\n",
-      "   4.58586347e-15-1.87731282e-13j ... -3.16369264e-15-5.48573327e-14j\n",
-      "   4.58586347e-15+1.87731282e-13j -1.12990894e-14-9.04848331e-13j]]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RMSE1D_k=1</th>\n",
+       "      <th>RMSE2D_k=1</th>\n",
+       "      <th>RMSE1D_k=2</th>\n",
+       "      <th>RMSE2D_k=2</th>\n",
+       "      <th>RMSE1D_k=5</th>\n",
+       "      <th>RMSE2D_k=5</th>\n",
+       "      <th>RMSE1D_k=10</th>\n",
+       "      <th>RMSE2D_k=10</th>\n",
+       "      <th>RMSE1D_k=20</th>\n",
+       "      <th>RMSE2D_k=20</th>\n",
+       "      <th>RMSE1D_k=50</th>\n",
+       "      <th>RMSE2D_k=50</th>\n",
+       "      <th>RMSE1D_k=75</th>\n",
+       "      <th>RMSE2D_k=75</th>\n",
+       "      <th>RMSE1D_k=100</th>\n",
+       "      <th>RMSE2D_k=100</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.865773e-09</td>\n",
+       "      <td>2.870021e-09</td>\n",
+       "      <td>3.932007e-09</td>\n",
+       "      <td>1.738979e-09</td>\n",
+       "      <td>3.932794e-09</td>\n",
+       "      <td>1.714798e-09</td>\n",
+       "      <td>3.932779e-09</td>\n",
+       "      <td>1.710310e-09</td>\n",
+       "      <td>3.932835e-09</td>\n",
+       "      <td>1.708314e-09</td>\n",
+       "      <td>3.933720e-09</td>\n",
+       "      <td>1.706794e-09</td>\n",
+       "      <td>3.934557e-09</td>\n",
+       "      <td>1.706427e-09</td>\n",
+       "      <td>3.936000e-09</td>\n",
+       "      <td>1.694818e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.274212e-09</td>\n",
+       "      <td>1.568679e-09</td>\n",
+       "      <td>3.299501e-09</td>\n",
+       "      <td>1.270630e-09</td>\n",
+       "      <td>3.301136e-09</td>\n",
+       "      <td>9.803853e-10</td>\n",
+       "      <td>3.301102e-09</td>\n",
+       "      <td>9.594965e-10</td>\n",
+       "      <td>3.300579e-09</td>\n",
+       "      <td>9.492963e-10</td>\n",
+       "      <td>3.297874e-09</td>\n",
+       "      <td>9.413640e-10</td>\n",
+       "      <td>3.296052e-09</td>\n",
+       "      <td>9.394495e-10</td>\n",
+       "      <td>3.297913e-09</td>\n",
+       "      <td>8.783224e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.473314e-09</td>\n",
+       "      <td>1.440322e-09</td>\n",
+       "      <td>3.489877e-09</td>\n",
+       "      <td>9.796992e-10</td>\n",
+       "      <td>3.490045e-09</td>\n",
+       "      <td>8.603300e-10</td>\n",
+       "      <td>3.489729e-09</td>\n",
+       "      <td>8.303038e-10</td>\n",
+       "      <td>3.489304e-09</td>\n",
+       "      <td>8.149967e-10</td>\n",
+       "      <td>3.488509e-09</td>\n",
+       "      <td>8.032006e-10</td>\n",
+       "      <td>3.488111e-09</td>\n",
+       "      <td>8.003440e-10</td>\n",
+       "      <td>3.489084e-09</td>\n",
+       "      <td>7.261828e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.884945e-09</td>\n",
+       "      <td>1.257910e-09</td>\n",
+       "      <td>1.888697e-09</td>\n",
+       "      <td>8.276568e-10</td>\n",
+       "      <td>1.893102e-09</td>\n",
+       "      <td>7.322417e-10</td>\n",
+       "      <td>1.893194e-09</td>\n",
+       "      <td>7.151721e-10</td>\n",
+       "      <td>1.892750e-09</td>\n",
+       "      <td>7.072747e-10</td>\n",
+       "      <td>1.891430e-09</td>\n",
+       "      <td>7.013601e-10</td>\n",
+       "      <td>1.891438e-09</td>\n",
+       "      <td>6.999318e-10</td>\n",
+       "      <td>1.896094e-09</td>\n",
+       "      <td>6.460487e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.734834e-09</td>\n",
+       "      <td>1.513141e-09</td>\n",
+       "      <td>1.758747e-09</td>\n",
+       "      <td>9.090074e-10</td>\n",
+       "      <td>1.760947e-09</td>\n",
+       "      <td>8.607913e-10</td>\n",
+       "      <td>1.761253e-09</td>\n",
+       "      <td>8.496342e-10</td>\n",
+       "      <td>1.760948e-09</td>\n",
+       "      <td>8.458192e-10</td>\n",
+       "      <td>1.759594e-09</td>\n",
+       "      <td>8.429574e-10</td>\n",
+       "      <td>1.758535e-09</td>\n",
+       "      <td>8.422703e-10</td>\n",
+       "      <td>1.761118e-09</td>\n",
+       "      <td>8.195790e-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>1.357460e-01</td>\n",
+       "      <td>1.169914e-01</td>\n",
+       "      <td>1.366638e-01</td>\n",
+       "      <td>8.354754e-02</td>\n",
+       "      <td>1.382617e-01</td>\n",
+       "      <td>6.950761e-02</td>\n",
+       "      <td>1.384003e-01</td>\n",
+       "      <td>6.830320e-02</td>\n",
+       "      <td>1.384098e-01</td>\n",
+       "      <td>6.783438e-02</td>\n",
+       "      <td>1.383176e-01</td>\n",
+       "      <td>6.766096e-02</td>\n",
+       "      <td>1.383034e-01</td>\n",
+       "      <td>6.761570e-02</td>\n",
+       "      <td>1.400167e-01</td>\n",
+       "      <td>6.434849e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>1.481434e-01</td>\n",
+       "      <td>1.269815e-01</td>\n",
+       "      <td>1.494454e-01</td>\n",
+       "      <td>9.131146e-02</td>\n",
+       "      <td>1.511119e-01</td>\n",
+       "      <td>7.708389e-02</td>\n",
+       "      <td>1.512726e-01</td>\n",
+       "      <td>7.591506e-02</td>\n",
+       "      <td>1.512907e-01</td>\n",
+       "      <td>7.543194e-02</td>\n",
+       "      <td>1.511915e-01</td>\n",
+       "      <td>7.525998e-02</td>\n",
+       "      <td>1.511710e-01</td>\n",
+       "      <td>7.521247e-02</td>\n",
+       "      <td>1.529814e-01</td>\n",
+       "      <td>7.184699e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>1.783827e-01</td>\n",
+       "      <td>1.410460e-01</td>\n",
+       "      <td>1.796620e-01</td>\n",
+       "      <td>1.014234e-01</td>\n",
+       "      <td>1.813917e-01</td>\n",
+       "      <td>8.513572e-02</td>\n",
+       "      <td>1.815566e-01</td>\n",
+       "      <td>8.375268e-02</td>\n",
+       "      <td>1.815690e-01</td>\n",
+       "      <td>8.315932e-02</td>\n",
+       "      <td>1.814396e-01</td>\n",
+       "      <td>8.290198e-02</td>\n",
+       "      <td>1.814113e-01</td>\n",
+       "      <td>8.283061e-02</td>\n",
+       "      <td>1.832896e-01</td>\n",
+       "      <td>7.842326e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>199</th>\n",
+       "      <td>1.954206e-01</td>\n",
+       "      <td>1.549724e-01</td>\n",
+       "      <td>1.969328e-01</td>\n",
+       "      <td>1.138011e-01</td>\n",
+       "      <td>1.989569e-01</td>\n",
+       "      <td>9.483013e-02</td>\n",
+       "      <td>1.991382e-01</td>\n",
+       "      <td>9.329184e-02</td>\n",
+       "      <td>1.991469e-01</td>\n",
+       "      <td>9.260204e-02</td>\n",
+       "      <td>1.990184e-01</td>\n",
+       "      <td>9.227924e-02</td>\n",
+       "      <td>1.989946e-01</td>\n",
+       "      <td>9.218884e-02</td>\n",
+       "      <td>2.011950e-01</td>\n",
+       "      <td>8.697200e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>2.556415e-01</td>\n",
+       "      <td>1.827296e-01</td>\n",
+       "      <td>2.572096e-01</td>\n",
+       "      <td>1.325467e-01</td>\n",
+       "      <td>2.591995e-01</td>\n",
+       "      <td>1.107529e-01</td>\n",
+       "      <td>2.593768e-01</td>\n",
+       "      <td>1.087430e-01</td>\n",
+       "      <td>2.593653e-01</td>\n",
+       "      <td>1.078515e-01</td>\n",
+       "      <td>2.591681e-01</td>\n",
+       "      <td>1.073518e-01</td>\n",
+       "      <td>2.591337e-01</td>\n",
+       "      <td>1.072166e-01</td>\n",
+       "      <td>2.612833e-01</td>\n",
+       "      <td>1.005418e-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>201 rows × 16 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       RMSE1D_k=1    RMSE2D_k=1    RMSE1D_k=2    RMSE2D_k=2    RMSE1D_k=5  \\\n",
+       "0    3.865773e-09  2.870021e-09  3.932007e-09  1.738979e-09  3.932794e-09   \n",
+       "1    3.274212e-09  1.568679e-09  3.299501e-09  1.270630e-09  3.301136e-09   \n",
+       "2    3.473314e-09  1.440322e-09  3.489877e-09  9.796992e-10  3.490045e-09   \n",
+       "3    1.884945e-09  1.257910e-09  1.888697e-09  8.276568e-10  1.893102e-09   \n",
+       "4    1.734834e-09  1.513141e-09  1.758747e-09  9.090074e-10  1.760947e-09   \n",
+       "..            ...           ...           ...           ...           ...   \n",
+       "196  1.357460e-01  1.169914e-01  1.366638e-01  8.354754e-02  1.382617e-01   \n",
+       "197  1.481434e-01  1.269815e-01  1.494454e-01  9.131146e-02  1.511119e-01   \n",
+       "198  1.783827e-01  1.410460e-01  1.796620e-01  1.014234e-01  1.813917e-01   \n",
+       "199  1.954206e-01  1.549724e-01  1.969328e-01  1.138011e-01  1.989569e-01   \n",
+       "200  2.556415e-01  1.827296e-01  2.572096e-01  1.325467e-01  2.591995e-01   \n",
+       "\n",
+       "       RMSE2D_k=5   RMSE1D_k=10   RMSE2D_k=10   RMSE1D_k=20   RMSE2D_k=20  \\\n",
+       "0    1.714798e-09  3.932779e-09  1.710310e-09  3.932835e-09  1.708314e-09   \n",
+       "1    9.803853e-10  3.301102e-09  9.594965e-10  3.300579e-09  9.492963e-10   \n",
+       "2    8.603300e-10  3.489729e-09  8.303038e-10  3.489304e-09  8.149967e-10   \n",
+       "3    7.322417e-10  1.893194e-09  7.151721e-10  1.892750e-09  7.072747e-10   \n",
+       "4    8.607913e-10  1.761253e-09  8.496342e-10  1.760948e-09  8.458192e-10   \n",
+       "..            ...           ...           ...           ...           ...   \n",
+       "196  6.950761e-02  1.384003e-01  6.830320e-02  1.384098e-01  6.783438e-02   \n",
+       "197  7.708389e-02  1.512726e-01  7.591506e-02  1.512907e-01  7.543194e-02   \n",
+       "198  8.513572e-02  1.815566e-01  8.375268e-02  1.815690e-01  8.315932e-02   \n",
+       "199  9.483013e-02  1.991382e-01  9.329184e-02  1.991469e-01  9.260204e-02   \n",
+       "200  1.107529e-01  2.593768e-01  1.087430e-01  2.593653e-01  1.078515e-01   \n",
+       "\n",
+       "      RMSE1D_k=50   RMSE2D_k=50   RMSE1D_k=75   RMSE2D_k=75  RMSE1D_k=100  \\\n",
+       "0    3.933720e-09  1.706794e-09  3.934557e-09  1.706427e-09  3.936000e-09   \n",
+       "1    3.297874e-09  9.413640e-10  3.296052e-09  9.394495e-10  3.297913e-09   \n",
+       "2    3.488509e-09  8.032006e-10  3.488111e-09  8.003440e-10  3.489084e-09   \n",
+       "3    1.891430e-09  7.013601e-10  1.891438e-09  6.999318e-10  1.896094e-09   \n",
+       "4    1.759594e-09  8.429574e-10  1.758535e-09  8.422703e-10  1.761118e-09   \n",
+       "..            ...           ...           ...           ...           ...   \n",
+       "196  1.383176e-01  6.766096e-02  1.383034e-01  6.761570e-02  1.400167e-01   \n",
+       "197  1.511915e-01  7.525998e-02  1.511710e-01  7.521247e-02  1.529814e-01   \n",
+       "198  1.814396e-01  8.290198e-02  1.814113e-01  8.283061e-02  1.832896e-01   \n",
+       "199  1.990184e-01  9.227924e-02  1.989946e-01  9.218884e-02  2.011950e-01   \n",
+       "200  2.591681e-01  1.073518e-01  2.591337e-01  1.072166e-01  2.612833e-01   \n",
+       "\n",
+       "     RMSE2D_k=100  \n",
+       "0    1.694818e-09  \n",
+       "1    8.783224e-10  \n",
+       "2    7.261828e-10  \n",
+       "3    6.460487e-10  \n",
+       "4    8.195790e-10  \n",
+       "..            ...  \n",
+       "196  6.434849e-02  \n",
+       "197  7.184699e-02  \n",
+       "198  7.842326e-02  \n",
+       "199  8.697200e-02  \n",
+       "200  1.005418e-01  \n",
+       "\n",
+       "[201 rows x 16 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -95,8 +384,9 @@
     "        rmse_string2D = \"RMSE2D_k=\" + str(k)\n",
     "        # df.at[i, cr_string2D] = cr2D\n",
     "        df.at[i, rmse_string2D] = rmse2D\n",
-    "\n",
-    "# df\n"
+    "        \n",
+    "# df.to_pickle(\"analysis2.4.pkl\")\n",
+    "df"
    ]
   },
   {
