Make more progress on analysis2.4

--- a/analysis2.4.ipynb
+++ b/analysis2.4.ipynb
@@ -13,6 +13,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "320377cf-8ff6-45dd-96fe-201e97a7bfff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instead of looping through 201 images (in cell below), can do the 2D FFT on the whole phi array all at once. \n",
+    "# Easier then to do the 201*N RMSE thing.\n",
+    "\n",
+    "phi = np.load(\"Phi_201snap.npy\")\n",
+    "df = pd.DataFrame(index=np.arange(201))\n",
+    "\n",
+    "# Define values for k\n",
+    "k_values = [1, 2, 5, 10, 20, 50, 75, 100]\n",
+    "\n",
+    "# Compute 1D (in r) and 2D (r, z) FFT's\n",
+    "fft = np.fft.fft(phi, axis=0)\n",
+    "fft2 = np.fft.fft2(phi, axes=(0, 1))\n",
+    "\n",
+    "for k in k_values:\n",
+    "    # 1D\n",
+    "    # Keep only the top k frequencies\n",
+    "    fft_compressed1D = np.zeros_like(fft)\n",
+    "    fft_compressed1D[:k] = fft[:k]\n",
+    "    \n",
+    "    # Reconstruct the data using inverse FFT\n",
+    "    reconstructed1D = np.fft.ifft(fft_compressed1D).real\n",
+    "    \n",
+    "    # Compute the error (RMSE) and compression ratio\n",
+    "    diff1D = data - reconstructed1D\n",
+    "    rmse1D = np.sqrt(np.mean(diff1D**2))\n",
+    "    cr1D = 101 / k\n",
+    "    \n",
+    "    # Add to dataframe\n",
+    "    # cr_string1D = \"CR1D_k=\" + str(k)\n",
+    "    rmse_string1D = \"RMSE1D_k=\" + str(k)\n",
+    "    # df.at[i, cr_string1D] = cr1D\n",
+    "    df.at[i, rmse_string1D] = rmse1D\n",
+    "    \n",
+    "    # 2D\n",
+    "    # Keep only the top k frequencies\n",
+    "    fft_compressed2D = np.zeros_like(fft2)\n",
+    "    fft_compressed2D[:k, :k] = fft2[:k, :k]\n",
+    "    \n",
+    "    # Reconstruct the data using inverse FFT\n",
+    "    reconstructed2D = np.fft.ifft2(fft_compressed2D).real\n",
+    "    \n",
+    "    # Compute the error (RMSE) and compression ratio\n",
+    "    diff2D = data - reconstructed2D\n",
+    "    rmse2D = np.sqrt(np.mean(diff2D**2))\n",
+    "    cr2D = (101 * 227) / (k * k)\n",
+    "    \n",
+    "    # Add to dataframe\n",
+    "    # cr_string2D = \"CR2D_k=\" + str(k)\n",
+    "    rmse_string2D = \"RMSE2D_k=\" + str(k)\n",
+    "    # df.at[i, cr_string2D] = cr2D\n",
+    "    df.at[i, rmse_string2D] = rmse2D\n",
+    "        \n",
+    "# df.to_pickle(\"analysis2.4.pkl\")\n",
+    "df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "d23441a2-ead8-438e-8467-bd2da8915910",
    "metadata": {},
@@ -343,14 +407,14 @@
     "    data = phi[:,:,i]\n",
     "\n",
     "    # Compute 1D (in r) and 2D FFT's\n",
-    "    fft_r = np.fft.fft(data, axis=0)\n",
+    "    fft = np.fft.fft(data, axis=0)\n",
     "    fft2 = np.fft.fft2(data)\n",
     "\n",
     "    for k in k_values:\n",
     "        # 1D\n",
     "        # Keep only the top k frequencies\n",
-    "        fft_compressed1D = np.zeros_like(fft_r)\n",
-    "        fft_compressed1D[:k] = fft_r[:k]\n",
+    "        fft_compressed1D = np.zeros_like(fft)\n",
+    "        fft_compressed1D[:k] = fft[:k]\n",
     "        \n",
     "        # Reconstruct the data using inverse FFT\n",
     "        reconstructed1D = np.fft.ifft(fft_compressed1D).real\n",
